# gpu-cpg

./: .gitignore  CMakeLists.txt  README.md  compare-warp-spur.sh  convert_dimacs.sh  corder.sh  densify-10-foreach.sh  densify.sh  dump-elist.sh  dump-graph-stats.sh  gen-big-table.sh  gen-csr-bin.sh  gen-runtime-breakdown.sh  gen-runtime-err-vs-avgdeg.sh  gen-slacks-10-foreach.sh  gen-slacks.sh  gen-speedup-err-vs-diam.sh  gorder.sh  prof.sh  rabbit-reorder.sh  runall.sh  runtime_table.sh  runtime_table_dac21.sh  vr-comp.sh
benchmarks/: dac21_paper_example.txt  simple.txt  tv80_unit_wgts.txt
doc/: bvss-compression-study.md  run_triton_experiment.py  tc-pathgen-kernel-fusion.md  tc-pathgen-pfxt-spec.md  tc-pathgen-sfxt-spec.md  tc-pathgen-sort.md  tc-pfxt-lessons-learned.md  tc-pfxt-optimization-readme.md  tc-powered-cpg-proposal.md  triton-experiment.md
doc/tests/: test_triton_gates.py  test_triton_io.py
doc/triton_exp/: benchmark.py  gates.py  io.py  kernel.py
examples/: .read_input.cpp.swp  .reduce.cu.swp  CMakeLists.txt  abl-study-gen-runtime-vs-delta.cu  bfs_hybrid.cu  bfs_td.cu  bfs_td_vs_bu.cu  compare-warp-spur.cu  convert-dimacs.cu  cpg-compare.cu  cpg-mteps.cu  cpg-other-vrs.cu  cpg-runtime-breakdown.cu  cpg-short-long.cu  cpg-slack-error.cu  cpg.cpp  cpg.cu  dac21-baseline.cu  densify.cu  dump-csr-bin.cu  dump-elist.cu  dump-graph-stats.cu  gen-big-table.cu  gen-runtime-error-vs-avgdeg.cu  gen-runtime-error-vs-diam.cu  gen-runtime-error-vs-k.cu  gen_benchmark.cu  gen_sizedup_benchmark.cu  get_node_by_idx.cu  levelize.cpp  levelize.cu  lvlize_then_relax.cu  read_input.cpp  reduce.cpp  reduce.cu  tc-pfxt-bvss-check.cu  tc-pfxt-gate4-step1.cu  tc-pfxt-gate5.cu  tc-pfxt-inprocess-common.cuh  tc-pfxt-inprocess-exactness.cu  (+3 more)
experiments/big-table/: big_table-no-cr.csv  big_table-with-cr.csv
experiments/paths-per-step-vs-delta/: cage15-acc-paths-per-step-d=10.000000.csv  cage15-acc-paths-per-step-d=12.000000.csv  cage15-acc-paths-per-step-d=14.000000.csv  cage15-acc-paths-per-step-d=16.000000.csv  cage15-acc-paths-per-step-d=2.000000.csv  cage15-acc-paths-per-step-d=4.000000.csv  cage15-acc-paths-per-step-d=6.000000.csv  cage15-acc-paths-per-step-d=8.000000.csv  cage15-paths-per-step-d=10.000000.csv  cage15-paths-per-step-d=12.000000.csv  cage15-paths-per-step-d=14.000000.csv  cage15-paths-per-step-d=16.000000.csv  cage15-paths-per-step-d=2.000000.csv  cage15-paths-per-step-d=4.000000.csv  cage15-paths-per-step-d=6.000000.csv  cage15-paths-per-step-d=8.000000.csv  netcard_random_wgts-acc-paths-per-step-d=100.000000.csv  netcard_random_wgts-acc-paths-per-step-d=120.000000.csv  netcard_random_wgts-acc-paths-per-step-d=140.000000.csv  netcard_random_wgts-acc-paths-per-step-d=160.000000.csv  netcard_random_wgts-acc-paths-per-step-d=20.000000.csv  netcard_random_wgts-acc-paths-per-step-d=40.000000.csv  netcard_random_wgts-acc-paths-per-step-d=60.000000.csv  netcard_random_wgts-acc-paths-per-step-d=80.000000.csv  netcard_random_wgts-paths-per-step-d=100.000000.csv  netcard_random_wgts-paths-per-step-d=120.000000.csv  netcard_random_wgts-paths-per-step-d=140.000000.csv  netcard_random_wgts-paths-per-step-d=160.000000.csv  netcard_random_wgts-paths-per-step-d=20.000000.csv  netcard_random_wgts-paths-per-step-d=40.000000.csv  netcard_random_wgts-paths-per-step-d=60.000000.csv  netcard_random_wgts-paths-per-step-d=80.000000.csv
experiments/runtime-err-vs-avgdeg/: aes_core_random_wgts-err-vs-avgdeg-dac21.csv  aes_core_random_wgts-err-vs-avgdeg-ours.csv  aes_core_random_wgts-rt-vs-avgdeg-dac21.csv  aes_core_random_wgts-rt-vs-avgdeg-ours.csv  vga_lcd_random_wgts-err-vs-avgdeg-dac21.csv  vga_lcd_random_wgts-err-vs-avgdeg-ours.csv  vga_lcd_random_wgts-rt-vs-avgdeg-dac21.csv  vga_lcd_random_wgts-rt-vs-avgdeg-ours.csv
experiments/runtime-err-vs-diam/: error-vs-diam-dac21.csv  error-vs-diam-ours.csv  runtime-vs-diam-dac21.csv  runtime-vs-diam-ours.csv
experiments/runtime-err-vs-k/: aes_core_random_wgts_dense40-err-vs-k-dac21.csv  aes_core_random_wgts_dense40-err-vs-k-ours.csv  aes_core_random_wgts_dense40-rt-vs-k-dac21.csv  aes_core_random_wgts_dense40-rt-vs-k-ours.csv  cage15-err-vs-k-dac21.csv  cage15-err-vs-k-ours.csv  cage15-rt-vs-k-dac21.csv  cage15-rt-vs-k-ours.csv  des_perf_random_wgts_dense40-err-vs-k-dac21.csv  des_perf_random_wgts_dense40-err-vs-k-ours.csv  des_perf_random_wgts_dense40-rt-vs-k-dac21.csv  des_perf_random_wgts_dense40-rt-vs-k-ours.csv  ldoor-err-vs-k-dac21.csv  ldoor-err-vs-k-ours.csv  ldoor-rt-vs-k-dac21.csv  ldoor-rt-vs-k-ours.csv  leon2_iccad_random_wgts_dense40-err-vs-k-dac21.csv  leon2_iccad_random_wgts_dense40-err-vs-k-ours.csv  leon2_iccad_random_wgts_dense40-rt-vs-k-dac21.csv  leon2_iccad_random_wgts_dense40-rt-vs-k-ours.csv  leon3mp_iccad_random_wgts_dense40-err-vs-k-dac21.csv  leon3mp_iccad_random_wgts_dense40-err-vs-k-ours.csv  leon3mp_iccad_random_wgts_dense40-rt-vs-k-dac21.csv  leon3mp_iccad_random_wgts_dense40-rt-vs-k-ours.csv  netcard_random_wgts_dense40-err-vs-k-dac21.csv  netcard_random_wgts_dense40-err-vs-k-ours.csv  netcard_random_wgts_dense40-rt-vs-k-dac21.csv  netcard_random_wgts_dense40-rt-vs-k-ours.csv  nlpkkt120-err-vs-k-dac21.csv  nlpkkt120-err-vs-k-ours.csv  nlpkkt120-rt-vs-k-dac21.csv  nlpkkt120-rt-vs-k-ours.csv  nlpkkt160-err-vs-k-dac21.csv  nlpkkt160-err-vs-k-ours.csv  nlpkkt160-rt-vs-k-dac21.csv  nlpkkt160-rt-vs-k-ours.csv  vga_lcd_random_wgts_dense40-err-vs-k-dac21.csv  vga_lcd_random_wgts_dense40-err-vs-k-ours.csv  vga_lcd_random_wgts_dense40-rt-vs-k-dac21.csv  vga_lcd_random_wgts_dense40-rt-vs-k-ours.csv
gpucpg/: .gpucpg.cu.swp  .gpucpg.hpp.swp  CMakeLists.txt  bfs_bu_step_helpers.cuh  device_info.cu  gpucpg.cu  gpucpg.cuh  gpucpg.h  gpucpg.hpp  graph.h  tc_pfxt_bvss.cuh  tc_pfxt_candidates.cuh  tc_pfxt_families.cuh  tc_pfxt_family_capture.cuh  tc_pfxt_mma_dispatch.cuh  tc_sfxt_bvss.cuh  timer.hpp
scripts/: run_tc_pfxt_current_best_retime.sh
unittests/: CMakeLists.txt  ballot.cu  memcpy.cu  tc_pfxt_bvss.cu  tc_pfxt_candidates.cu  tc_pfxt_inprocess.cu  tc_sfxt_bvss.cu
(+3 files in other folders)
